tests/broken/writ-adjacent-expressions.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ-adjacent-expressions.rs:4:28
  |
4 | #[oxiplate_inline = "{{ foo bar }}"]
  |                            ^
